--- a/Frontend/src/assets/auth.css
+++ b/Frontend/src/assets/auth.css
@@ -1,4 +1,4 @@
-button {
+.button {
   width: 100%;
   display: flex;
   padding: 0.5rem 1.4rem;
@@ -22,7 +22,7 @@ button {
   height: 24px;
 }
 
-button:hover {
+.button:hover {
   transform: scale(1.02);
 }
 
