--- a/Frontend/src/assets/questionnaireSolve.css
+++ b/Frontend/src/assets/questionnaireSolve.css
@@ -7,3 +7,12 @@
   margin-top: 0px;
   padding-top: 0px;
 }
+
+.custom-toolbar {
+  position: relative;
+  display: flex;
+  background-color: #f5f5f5;
+  padding-left: 24px;
+  padding-right: 24px;
+  min-height: 64px;
+}
