--- a/Frontend/src/assets/auth.css
+++ b/Frontend/src/assets/auth.css
@@ -10,10 +10,10 @@
   vertical-align: middle;
   align-items: center;
   border-radius: 0.5rem;
-  border: 1px solid rgba(0, 0, 0, 0.25);
+  border: 1px solid 'text.secondary';
   gap: 0.75rem;
-  color: rgb(65, 63, 63);
-  background-color: #fff;
+  color: 'text.secondary';
+  background-color: 'primary.main';
   cursor: pointer;
   transition: all 0.6s ease;
 }
